# salt-pipe

./: .env  .env.example  .gitignore  CMakeLists.txt  README.md  mk
docs/: key-rotation-spec.md  master-plan.md  prompt-1.md  store-prd.md
include/saltpipe/: config.hpp  saltpipe.hpp
logs/: .keep
src/: main.cpp  saltpipe.cpp
